[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/musicplayer/MplayerOsnova.png" type="Texture" id=1]
[ext_resource path="res://song/PlayerMusic/MusicForPlayer1.mp3" type="AudioStream" id=2]
[ext_resource path="res://Scripts/MusicPlayer.gd" type="Script" id=3]

[node name="MusicPlayer" type="Node2D"]
script = ExtResource( 3 )

[node name="MusicOsnova" type="TextureRect" parent="."]
margin_right = 300.0
margin_bottom = 196.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickPlay" type="Button" parent="MusicOsnova"]
margin_left = 12.0
margin_right = 31.0
margin_bottom = 26.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickPause" type="Button" parent="MusicOsnova"]
margin_left = 33.0
margin_right = 50.0
margin_bottom = 26.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickRewidBack" type="Button" parent="MusicOsnova"]
margin_left = 52.0
margin_right = 80.0
margin_bottom = 26.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickRewidGo" type="Button" parent="MusicOsnova"]
margin_left = 82.0
margin_right = 110.0
margin_bottom = 26.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="MusicOsnova/ClickPlay" to="." method="_on_ClickPlay_pressed"]
[connection signal="pressed" from="MusicOsnova/ClickPause" to="." method="_on_ClickPause_pressed"]
[connection signal="pressed" from="MusicOsnova/ClickRewidBack" to="." method="_on_ClickRewindBack_pressed"]
[connection signal="pressed" from="MusicOsnova/ClickRewidGo" to="." method="_on_ClickRewindGo_pressed"]
